remove unnecessary Add-Opens